fix inset box shadow z-index

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ h1 {
 
 .inset-box-shadow::after {
   content: "";
-  z-index: 2;
   box-shadow: inset 0px -8px 3px 0px rgb(255 255 255 / 85%);
 }
 
